test/unit/components/dialogue/scripts/invalid/header-too-few.dscript
Bob confused
Uh, what type am I?
